--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "status-test",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "public/scripts/index.js",
   "scripts": {
     "build": "rm -rf public/scripts && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'public/scripts/test'"
   },
   "author": "ZhenyaGro",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^10.0.2",
+    "@types/node": "^20.8.4",
+    "mocha": "^10.2.0",
     "typescript": "^5.2.2"
   }
 }
