--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "status-test",
   "type": "module",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "public/scripts/index.js",
   "scripts": {
+    "start": "node public/scripts",
     "build": "rm -rf public/scripts && tsc",
     "test": "mocha 'public/scripts/tests'"
   },
